Created a CSS rule & function that implements a strike through feature on time conflicted activities when checked.  Just need to get the correct label text-decoration to change.

--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,12 @@ button:hover {
   clear: both;
 }
 
+.strike-through:checked + span {
+  text-decoration: line-through;
+}
+
+
+
 /* =================================
   Media Queries
 ==================================== */
