Changed CSS rule to line-through the disabled inputs, instead of checked ones. Function is working now.

--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ button:hover {
   clear: both;
 }
 
-.strike-through:checked + span {
+.strike-through:disabled + span {
   text-decoration: line-through;
 }
 
