Added some of the initial validation functionality to highlight input fields left blank by user.

--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,13 @@ button:hover {
   text-decoration: line-through;
 }
 
+.validate {
+  border: 2px solid red;
+  width: 50%;
+  heigth: 50%;
+  background-color: pink;
+}
+
 /* =================================
   Media Queries
 ==================================== */
