Started on adding real-time error messages for the name, email & credit card number inputs.  Put spans in the html, started adding CSS rules to style them.

--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,16 @@ button:hover {
   width: 100%;
 }
 
+.real-time {
+  position: inherit;
+  width: 150px;
+  height: 45px;
+  float: right;
+  border: 3px solid blue;
+
+}
+
+
 
 /* =================================
   Helper Classes
