Added more style rules to CSS for spans.  Wrote a real-time error validation function that adds event listeners to input fields & uses other functions to display appropriate errors based on user input.

--- a/css/style.css
+++ b/css/style.css
@@ -143,11 +143,16 @@ button:hover {
 }
 
 .real-time {
-  position: inherit;
-  width: 150px;
+  width: 170px;
   height: 45px;
   float: right;
-  border: 3px solid blue;
+  border: transparent;
+  border-radius: 8px;
+  margin: 0 0 2px 3px;
+  padding: 3px;
+  color: #000;
+  background-color: #e54d4d;
+  text-align: center;
 
 
 }
